# elyra

./: .bumpversion.cfg  .deepsource.toml  .dockerignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc  .nycrc  .prettierrc  .travis.yml  .yarnrc.yml  AGENT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMITTERS.csv  CONTRIBUTING.md  Dockerfile  GEMINI.md  JUPYTER_AI_3X_ISSUE.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  THIRD_PARTY.md  build_requirements.txt  code-of-conduct.md  conftest.py  create-release.py  create_dist.py  create_foresight_release.py  create_integra_release.py  cypress.config.ts  cypress.json  foresight_readme.md  integra_install.md  integra_install_readme.md  jest.config.base.js  (+18 more)
.github/: PULL_REQUEST_TEMPLATE  release.yml
.github/ISSUE_TEMPLATE/: feature_request.md  issue-template.md  pipeline-issue-report.md  pipeline-issue-template.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql-analysis.yml  pythonapp.yml
.virtual_documents/: Untitled.ipynb  Untitled1.ipynb
ai_workspace/: __init__.py  _version.py
ai_workspace/metadata/: __init__.py  handlers.py  metadata.py  runtime.py
ai_workspace/pipeline/: __init__.py  parser.py  pipeline.py  processor.py  processor_kfp.py  scheduler.py
ai_workspace/scheduler/: handler.py
ai_workspace/util/: archive.py
binder/: jupyter_notebook_config.py  postBuild  start
catalog-connectors/airflow/: README.md
cypress/: .eslintrc.js  README.md  cypress-drag-drop.d.ts  test-config.py  tsconfig.json  webpack.config.js
cypress/assets/: helloworld.py  invalid.pipeline
cypress/fixtures/: generic-test.pipeline  helloworld.py
cypress/integration/: codesnippet.ts  git.ts  launcher.ts  lsp.ts  pipeline.ts  scripteditor.ts  spec.ts  submitnotebookbutton.ts  toc.ts
cypress/plugins/: index.js
cypress/support/: commands.ts  index.d.ts
cypress/tests/: codesnippet.cy.ts  codesnippetfromselectedcells.cy.ts  git.cy.ts  launcher.cy.ts  lsp.cy.ts  pipeline.cy.ts  pythoneditor.cy.ts  reditor.cy.ts  scriptdebugger.cy.ts  submitnotebookbutton.cy.ts  toc.cy.ts
data_exchange/: data_exchange_example.pipeline  data_exchange_example_airflow.pipeline  data_exchange_payload.json  data_exchange_payload_airflow.json  kfp_data_exchange_basic.pipeline
dev/docs/: Logging.md
docker/elyra_development/: Dockerfile
docs/: Makefile  make.bat  requirements.txt
docs/dev/: code-snippets.md  contributing-extensions.md  deployment.md  elyra-with-jupyterhub.md  enhanced-python-support.md  getting-started.md  logging.md  metadata.md  pipelines.md  release-process.md
docs/source/: conf.py  index.rst
elyra/: __init__.py  _version.py  cli.py  elyra_app.py
elyra/Shane's Workplace/: test.txt
elyra/airflow/: bootstrapper.py  operator.py
elyra/api/: __init__.py  elyra.json  elyra.yaml  handlers.py
elyra/cli/: __init__.py  decorators.py  elyra_app.py  metadata_app.py  pipeline_app.py  pipeline_app_utils.py  utils.py
elyra/contents/: __init__.py  file_parser.py  handlers.py  parser.py
elyra/kfp/: __init__.py  bootstrapper.py  operator.py
elyra/lsp/: __init__.py  client.py  main.py  package.json
elyra/metadata/: __init__.py  app_utils.py  code_snippet.py  elyra_md.py  error.py  handlers.py  manager.py  metadata.py  metadata_app.py  metadata_app_utils.py  mixins.py  runtime.py  schema.py  schemaspace.py  schemaspaces.py  schemasproviders.py  storage.py
elyra/pipeline/: __init__.py  catalog_connector.py  component.py  component_catalog.py  component_metadata.py  component_parameter.py  component_parser_airflow.py  component_parser_kfp.py  component_reader.py  component_registry.py  elyra_engine.py  elyra_properties.py  handlers.py  http_kernel_manager.py  lsp.py  lsp_client.py  package.json  parser.py  pipeline.py  pipeline_constants.py  pipeline_definition.py  pipeline_utilities.py  processor.py  processor_airflow.py  processor_kfp.py  processor_local.py  properties.py  registry.py  runtime_metadata.py  runtime_type.py  runtimes_metadata.py  sort.py  validate.py  validation.py
elyra/scheduler/: handler.py
elyra/templates/: kfp_template.jinja2
elyra/util/: __init__.py  archive.py  cos.py  git.py  gitea.py  github.py  gitlab.py  gitutil.py  http.py  kubernetes.py  mixins.py  operation_parser.py  path.py  url.py
enterprise_scheduler_extension/: __init__.py  experiments.py  scheduler.py
enterprise_scheduler_extension/static/: index.js
etc/airflow/: requirements-elyra.txt
etc/config/: README.md  jupyter_notebook_config.py
etc/docker/: Dockerfile  README.md  metadata-runtime-template.json  start-jupyter.sh
etc/generic/: README.md  requirements-elyra-py37.txt  requirements-elyra.txt
etc/kfp/: pip.conf
etc/kubernetes/: README.md
etc/scripts/: README.md  clean-jupyterlab.sh  generate-make-graph.ts  migrate_pipeline.py  protect-metadata.sh
etc/templates/: pyproject.toml  setup.py
examples/: Dockerfile  requirements
jupyter-config/jupyter_notebook_config.d/: ai_workspace.json  jupyterlab_git.json
jupyter_enterprise_scheduler_extension/: __init__.py  scheduler.py
labextensions/elyra_code_snippet_extension/: __init__.py
labextensions/elyra_code_viewer_extension/: __init__.py
labextensions/elyra_metadata_common/: __init__.py
labextensions/elyra_metadata_extension/: __init__.py
labextensions/elyra_pipeline_editor_extension/: __init__.py
labextensions/elyra_python_editor_extension/: __init__.py
labextensions/elyra_r_editor_extension/: __init__.py
labextensions/elyra_scala_editor_extension/: __init__.py
labextensions/elyra_script_debugger_extension/: __init__.py
labextensions/elyra_script_editor/: __init__.py
scripts/: generate-make-graph.ts  start-test-server.ts
src/: NotebookExperiments.ts  SubmitNotebook.css  SubmitNotebook.ts  SubmitTable.tsx  index.tsx  utils.ts
style/: index.css
test/: jest.config.js  jest.setup.js
tests/: .eslintrc.js  README.md  test-config.py  tsconfig.json  webpack.config.js
testutils/: babel.config.js  jest.config.js  jest.setup.js  transform.js  tsconfig.jest.json
(+544 files in other folders)
