#
# Copyright 2018-2022 Elyra Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[bdist_wheel]
universal=0

[metadata]
description_file=README.md

[flake8]
application-import-names = elyra, test
application-package-names = elyra, test
enable-extensions = G
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
# https://docs.openstack.org/hacking/latest/user/hacking.html
ignore =
    # Import formatting
    E4,
    # Comparing types instead of isinstance
    E721,
    # Assigning lambda expression
    E731,
    # Ambiguous variable names
    E741,
    # File contains nothing but comments
    H104,
    # Include name with TODOs as in # TODO(yourname)
    H101,
    # Enable mocking
    H216,
    # Multi line docstrings should start without a leading new line
    H404,
    # Multi line docstrings should start with a one line summary followed by an empty line
    H405,
    # Allow breaks after binary operators
    W504
import-order-style = google
max-line-length = 120
