#
# Copyright 2018-2022 Elyra Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name=elyra
version=attr: elyra._version.__version__
url=https://github.com/elyra-ai/elyra
description=Elyra provides AI Centric extensions to JupyterLab
long_description=Elyra is a set of AI centric extensions to JupyterLab. It aims to help data scientists,
    machine learning engineers and AI developer’s through the model development life cycle complexities.
author=Elyra Maintainers
license=Apache License Version 2.0
platforms = Linux, Mac OS X, Windows
classifiers=
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[bdist_wheel]
universal=0

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    autopep8>=1.5.0
    black<=21.12b0  # Cap due to psf/black#2846
    click>=8  # elyra-ai/elyra#2579
    colorama
    deprecation
    entrypoints>=0.3
    jinja2>=3
    jsonschema>=3.2.0
    jupyter_core>=4.6.0
    jupyter_client>=6.1.7
    jupyter-packaging>=0.10
    jupyter_server>=1.7.0
    jupyterlab>=3.3.0
    jupyterlab-git~=0.32  # Avoid breaking 1.x changes
    jupyterlab-lsp>=3.8.0
    jupyter-resource-usage>=0.5.1
    MarkupSafe>=2.1
    minio>=7.0.0
    nbclient>=0.5.1
    nbconvert>=6.4.5
    nbdime~=3.1  # Cap from jupyterlab-git
    nbformat>=5.1.2
    networkx>=2.5.1
    papermill>=2.3.4
    python-lsp-server[all]>=1.1.0
    pyyaml>=5.3.1
    requests>=2.25.1
    rfc3986-validator>=0.1.1
    tornado>=6.1.0
    typing-extensions>=3.10
    traitlets>=4.3.2
    urllib3>=1.26.5
    watchdog>=2.1.3
    websocket-client
    yaspin

[options.extras_require]
airflow =
    pygithub
airflow-examples =
    elyra-examples-airflow-catalog
gitlab =
    python-gitlab
kfp =
    jsonschema>=3.2.0,<4.0
    kfp>=1.7.0,<2.0,!=1.7.2
    pyyaml>=5.3.1,<6.0
    typing-extensions>=3.10,<4
kfp-examples =
    elyra-examples-kfp-catalog
kfp-tekton =
    kfp-tekton ~=1.2.0  # See elyra-ai/elyra/pull/2034 for fix pack pinning
test =
    elyra-examples-airflow-catalog
    elyra-examples-kfp-catalog
    flake8>=3.5.0
    flake8-import-order>=0.18.1
    git-python
    hacking
    importlib-resources
    pytest>=5.4.1
    pytest-console-scripts
    pytest-tornasync
    pytest_virtualenv
    requests-mock
    requests-unixsocket
all =
    %(airflow)s
    %(airflow-examples)s
    %(gitlab)s
    %(kfp)s
    %(kfp-examples)s
    %(kfp-tekton)s
    %(test)s

[options.entry_points]
console_scripts =
    elyra-metadata = elyra.metadata.metadata_app:MetadataApp.main
    elyra-pipeline = elyra.cli.pipeline_app:pipeline
    jupyter-elyra = elyra.elyra_app:launch_instance
metadata.schemaspaces =
    runtimes = elyra.metadata.schemaspaces:Runtimes
    runtimes-images = elyra.metadata.schemaspaces:RuntimeImages
    code-snippets = elyra.metadata.schemaspaces:CodeSnippets
    component-catalogs = elyra.metadata.schemaspaces:ComponentCatalogs
    metadata-tests = elyra.tests.metadata.test_utils:MetadataTestSchemaspace
metadata.schemas_providers =
    runtimes = elyra.metadata.schemasproviders:RuntimesSchemas
    runtimes-images = elyra.metadata.schemasproviders:RuntimeImagesSchemas
    code-snippets = elyra.metadata.schemasproviders:CodeSnippetsSchemas
    component-catalogs = elyra.metadata.schemasproviders:ComponentCatalogsSchemas
    airflow-provider-package-catalog-schema = elyra.pipeline.airflow.provider_package_catalog_connector.airflow_provider_package_schema_provider:AirflowProviderPackageSchemasProvider [airflow]
    airflow-package-catalog-schema = elyra.pipeline.airflow.package_catalog_connector.airflow_package_schema_provider:AirflowPackageSchemasProvider [airflow]
    metadata-tests = elyra.tests.metadata.test_utils:MetadataTestSchemasProvider
elyra.pipeline.processors =
    local = elyra.pipeline.local.processor_local:LocalPipelineProcessor
    airflow = elyra.pipeline.airflow.processor_airflow:AirflowPipelineProcessor [airflow]
    kfp = elyra.pipeline.kfp.processor_kfp:KfpPipelineProcessor [kfp, kfp_tekton]
elyra.component.catalog_types =
    url-catalog = elyra.pipeline.catalog_connector:UrlComponentCatalogConnector
    local-file-catalog = elyra.pipeline.catalog_connector:FilesystemComponentCatalogConnector
    local-directory-catalog = elyra.pipeline.catalog_connector:DirectoryComponentCatalogConnector
    airflow-provider-package-catalog = elyra.pipeline.airflow.provider_package_catalog_connector.airflow_provider_package_catalog_connector:AirflowProviderPackageCatalogConnector [airflow]
    airflow-package-catalog = elyra.pipeline.airflow.package_catalog_connector.airflow_package_catalog_connector:AirflowPackageCatalogConnector [airflow]
papermill.engine =
    ElyraEngine = elyra.pipeline.elyra_engine:ElyraEngine

[options.packages.find]
exclude =
    docs*
    tests*

[flake8]
application-import-names = elyra, test
application-package-names = elyra, test
enable-extensions = G
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
ignore =
    # Import formatting
    E4,
    # Comparing types instead of isinstance
    E721,
    # Assigning lambda expression
    E731,
    # Ambiguous variable names
    E741,
    # File contains nothing but comments
    H104,
    # Include name with TODOs as in # TODO(yourname)
    H101,
    # Enable mocking
    H216,
    # Multi line docstrings should start without a leading new line
    H404,
    # Multi line docstrings should start with a one line summary followed by an empty line
    H405,
    # Line break before binary operator
    W503,
    # Allow breaks after binary operators
    W504
import-order-style = google
max-line-length = 120
