#
# Copyright 2018-2026 Elyra Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.5.0"]

[project]
name = "{{package-name}}"
version = "{{version}}"
description = "{{description}}"
maintainers = [{name = "Elyra Maintainers"}]
requires-python = ">=3.10"
dependencies = [{{install-requires}}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/elyra-ai/elyra"

[license]
file = "LICENSE"

[tool.hatch.build]
include = ["labextensions/**/*", "elyra/**/*"]

[tool.hatch.build.targets.wheel.shared-data]
{{shared-data}}
